--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <!-- This is a Jinja based template. To read more about Jinja, check
  https://jinja.palletsprojects.com/en/3.0.x/  -->
-<title>Message board</title>
+<title>This is Mammadzada's Message board</title>
 <body>
     <h4>There are {{ messages|length }} messages on the board.</h4>
-
+  
     <h4> Here are the last 10:</h4>
     <ul>
         {% for m in messages[-9:]|reverse %}
