--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <!-- This is a Jinja based template. To read more about Jinja, check
  https://jinja.palletsprojects.com/en/3.0.x/  -->
-<title>This is Mammadzada's Message board</title>
+<title>Message board</title>
 <body>
+    <h1>This is Mammadzada's Message board deployed from GitHub </h1>
     <h4>There are {{ messages|length }} messages on the board.</h4>
   
     <h4> Here are the last 10:</h4>
